syntax = "proto3";

package worldmap.flashcard;

option java_multiple_files = true;
option java_package = "com.worldmap.flashcard";

// Chinese Sentence FlashCard message
// Note: This feature uses direct Firestore communication from the frontend,
// not gRPC. This proto definition is maintained for:
// - Documentation of the data structure
// - Type generation for TypeScript/Java
// - Potential future backend integration
message ChineseSentenceCard {
  string id = 1;
  string chineseSentence = 2;
  string pinyin = 3;
  string englishTranslation = 4;
  string collectionId = 5;
  string difficulty = 6; // "beginner", "intermediate", "advanced"
  string grammarNotes = 7;
  string audioUrl = 8;
  int64 createdAt = 9;
  int64 updatedAt = 10;
}
